<?xml version="1.0" encoding="utf-8"?>
<!--' @author Aleksandra Targowicki '-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mischa.tasten_neigung.SoundFragment">


    <ImageButton
        android:id="@+id/exitSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.534"
        android:src="@drawable/ic_return"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="122dp"
        android:layout_height="126dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        tools:layout_editor_absoluteX="149dp">

        <RadioButton
            android:id="@+id/radio_bycicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_bycicle" />

        <RadioButton
            android:id="@+id/radio_horn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_horn" />

        <RadioButton
            android:id="@+id/radio_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_cat" />

        <RadioButton
            android:id="@+id/radio_rollin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_rollin" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
