<?xml version="1.0" encoding="utf-8"?>
<!--' @author Aleksandra Targowicki '-->
<!--' @author Michael Reupold '-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mischa.tasten_neigung.SoundFragment">



    <ImageButton
        android:id="@+id/exitManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_return"
        android:background="@null"
        android:layout_marginEnd="177dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="86dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.14" />

    <TextView
        android:id="@+id/tv_two"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/manual_orientationSensor"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_three" />

    <TextView
        android:id="@+id/tv_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="78dp"
        android:text="@string/manual_intensity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_two"
        app:layout_constraintVertical_bias="0.787" />

    <TextView
        android:id="@+id/tv_three"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/manual_sound"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/exitManual" />

    <ImageButton
        android:id="@+id/ID_nbrOne"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/nbr_one" />

    <ImageButton
        android:id="@+id/ID_nbrTwo"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/nbr_two"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintVertical_bias="0.935" />

    <ImageButton
        android:id="@+id/ID_nbrThree"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/nbr_three"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintVertical_bias="0.276" />


</android.support.constraint.ConstraintLayout>